tests/anp_demo/anp_gryffindor_gress.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: gress-rules-gryffindor
spec:
  priority: 15
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name:  gryffindor
  egress:
  - name: "deny-to-slytherin-at-ports-80-53-9003"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "pass-to-slytherin-at-port-80-53-9003"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-to-hufflepuff-at-ports-8080-5353"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-to-hufflepuff-everything-else"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  hufflepuff
  ingress:
  - name: "allow-from-ravenclaw-everything"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  ravenclaw
  - name: "deny-from-ravenclaw-everything"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  ravenclaw
  - name: "pass-from-ravenclaw-everything"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  ravenclaw
  - name: "deny-from-slytherin-at-port-80-53-9003"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "pass-from-slytherin-at-port-80-53-9003"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-from-hufflepuff-at-port-80-5353-9003"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name:  hufflepuff
