tests/anp_demo/slytherin-gryffindor.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: anp-priority-10
spec:
  priority: 10
  subject:
    namespaces:
      matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "pass-all-ingress-from-slytherin" 
    action: "Pass"
    from:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-some-ingress-from-to-slytherin-to-gryffindor
  namespace: gryffindor
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          conformance-house: slytherin
