test_outputs/connlist/anp_demo_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => gryffindor/harry-potter[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy gryffindor/allow-some-ingress-from-to-slytherin-to-gryffindor selects gryffindor/harry-potter[StatefulSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => ravenclaw/luna-lovegood[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between gryffindor/harry-potter[StatefulSet] => hufflepuff/cedric-diggory[StatefulSet]:

Allowed connections:
	Allowed TCP:[8080], UDP:[5353], SCTP:[9003] due to the following policies and rules:
		Egress (Allowed)
			[ANP] gress-rules-gryffindor // Egress rule allow-to-hufflepuff-at-ports-8080-5353 (Allow)
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-8079,8081-65535], UDP:[1-52,54-5352,5354-65535], SCTP:[1-9002,9004-65535] due to the following policies and rules:
		Egress (Denied)
			[ANP] gress-rules-gryffindor // Egress rule deny-to-hufflepuff-everything-else (Deny)
		Ingress (Allowed) due to the system default (Allow all)

	Denied UDP:[53] due to the following policies and rules:
		Egress (Denied)
			[ANP] gress-rules-gryffindor // Egress rule deny-to-hufflepuff-everything-else (Deny)
		Ingress (Allowed)
			[ANP] ingress-to-hufflepuff // Ingress rule allow-from-gryffindor-at-port-53 (Allow)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between gryffindor/harry-potter[StatefulSet] => ravenclaw/luna-lovegood[StatefulSet]:

Allowed connections:
	Allowed UDP:[52] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			[ANP] ingress-to-ravenclaw // Ingress rule pass-from-gryffindor-everything (Pass)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw allows connection by Ingress rule #2

Denied connections:
	Denied TCP, UDP:[1-51,53-65535], SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[ANP] ingress-to-ravenclaw // Ingress rule pass-from-gryffindor-everything (Pass)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], and Ingress rule #2 selects gryffindor/harry-potter[StatefulSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between gryffindor/harry-potter[StatefulSet] => slytherin/draco-malfoy[StatefulSet]:

Allowed connections:
	Allowed TCP:[1-79,81-65535], UDP:[1-52,54-65535], SCTP:[1-9002,9004-65535] due to the system default (Allow all)

Denied connections:
	Denied TCP:[80], UDP:[53], SCTP:[9003] due to the following policies and rules:
		Egress (Denied)
			[ANP] gress-rules-gryffindor // Egress rule deny-to-slytherin-at-ports-80-53-9003 (Deny)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hufflepuff/cedric-diggory[StatefulSet] => gryffindor/harry-potter[StatefulSet]:

Allowed connections:
	Allowed TCP:[80], UDP:[5353], SCTP:[9003] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			[ANP] gress-rules-gryffindor // Ingress rule allow-from-hufflepuff-at-port-80-5353-9003 (Allow)

Denied connections:
	Denied TCP:[1-79,81-65535], UDP:[1-5352,5354-65535], SCTP:[1-9002,9004-65535] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[ANP] gress-rules-gryffindor // Ingress rule deny-from-hufflepuff-everything-else (Deny)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hufflepuff/cedric-diggory[StatefulSet] => ravenclaw/luna-lovegood[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], but hufflepuff/cedric-diggory[StatefulSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hufflepuff/cedric-diggory[StatefulSet] => slytherin/draco-malfoy[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[BANP] default // Ingress rule deny-all-ingress-from-hufflepuff (Deny)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ravenclaw/luna-lovegood[StatefulSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ravenclaw/luna-lovegood[StatefulSet] => gryffindor/harry-potter[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], but gryffindor/harry-potter[StatefulSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed)
			[ANP] gress-rules-gryffindor // Ingress rule allow-from-ravenclaw-everything (Allow)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ravenclaw/luna-lovegood[StatefulSet] => hufflepuff/cedric-diggory[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], but hufflepuff/cedric-diggory[StatefulSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ravenclaw/luna-lovegood[StatefulSet] => slytherin/draco-malfoy[StatefulSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], but slytherin/draco-malfoy[StatefulSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between slytherin/draco-malfoy[StatefulSet] => gryffindor/harry-potter[StatefulSet]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			[ANP] anp-priority-10 // Ingress rule pass-all-ingress-from-slytherin (Pass)
			NetworkPolicy gryffindor/allow-some-ingress-from-to-slytherin-to-gryffindor allows connection by Ingress rule #1

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between slytherin/draco-malfoy[StatefulSet] => hufflepuff/cedric-diggory[StatefulSet]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			[ANP] ingress-to-hufflepuff // Ingress rule pass-from-slytherin (Pass)
			the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between slytherin/draco-malfoy[StatefulSet] => ravenclaw/luna-lovegood[StatefulSet]:

Allowed connections:
	Allowed TCP:[1-79,81-65535] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[ANP] ingress-to-ravenclaw // Ingress rule deny-from-slytherin-at-port-80 (Deny)

	Denied UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy ravenclaw/allow-some-ingress-from-to-ravenclaw selects ravenclaw/luna-lovegood[StatefulSet], and Ingress rule #1 selects slytherin/draco-malfoy[StatefulSet], but the protocols and ports do not match


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => hufflepuff/cedric-diggory[StatefulSet]
0.0.0.0-255.255.255.255 => slytherin/draco-malfoy[StatefulSet]
gryffindor/harry-potter[StatefulSet] => 0.0.0.0-255.255.255.255
hufflepuff/cedric-diggory[StatefulSet] => 0.0.0.0-255.255.255.255
slytherin/draco-malfoy[StatefulSet] => 0.0.0.0-255.255.255.255
